--- a/derash/static/styles/customer_restaurant.css
+++ b/derash/static/styles/customer_restaurant.css
@@ -2,19 +2,38 @@
     width: 100%;
     padding: 30px 50px;
     position: absolute;
-    top: 64px;
+    top: 84px;
 }
 
-.restaurant-intro {
+.select-nothing {
+    color: rgb(185,22,53);
+    color: rgb(230,69,95);
+    color: rgb(225,28,64);
+    color: rgb(192, 186, 186);
+    color: rgb(240, 233, 233);
+}
+
+/* .restaurant-intro {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 20px;
+    color: #000;
+} */
+
+.restaurant-intro {
+    display: flex;
+    gap: 30px;
+    color: #000;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
 }
 
 .restaurant-name {
-    font-size: 24px;
-    color: rgb(66, 255, 151);
+    font-size: 34px;
+    color: rgb(185,22,53);
+    margin-bottom: 20px;
 }
 
 .restaurant-img {
@@ -26,7 +45,7 @@
 
 .restaurant-location i {
     font-size: 24px;
-    color: #ff0000;
+    color: rgb(230,69,95);
 }
 
 .restaurant-dishes {
@@ -38,10 +57,11 @@
 
 .restaurant-dish {
     padding: 20px;
-    background: rgb(16, 39, 27);
-    border: 1px solid rgb(66, 255, 151);
+    background: rgb(245, 240, 240);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     display: flex;
     justify-content: space-between;
+    color: #000;
 }
 
 .dish-img {
@@ -56,7 +76,7 @@
 }
 
 .restaurant-dish h2 {
-    color: rgb(66, 255, 151);
+    color: rgb(230,69,95);
 }
 
 .dish-order {
@@ -81,24 +101,24 @@
 }
 
 .add-to-order {
-    border: 2px solid rgb(66, 255, 151);
-    color: rgb(66, 255, 151);
+    border: 2px solid rgb(9, 151, 73);
+    color: rgb(9, 151, 73);
 }
 
 
 .add-to-order:hover {
-    color: #112121;
-    background-color: rgb(66, 255, 151);
+    color: #fff;
+    background-color: rgb(9, 151, 73);
 }
 
 .decrease-from-order {
-    border: 2px solid rgb(247, 215, 35);
-    color: rgb(247, 215, 35);
+    border: 2px solid rgb(163, 148, 10);
+    color: rgb(163, 148, 10);
 }
 
 .decrease-from-order:hover {
-    color: #112121;
-    background-color: rgb(247, 215, 35);
+    color: #fff;
+    background-color: rgb(163, 148, 10);
 }
 
 .dish-amt {
@@ -108,14 +128,12 @@
 
 .restaurant-footer {
     position: fixed;
-    content: "Aloha";
     bottom: 0px;
     width: 100%;
     height: 60px;
-    border-top: 2px solid rgb(66, 255, 151);
     text-align: center;
     padding: 20px;
-    background-color: rgb(66, 245, 141);
+    background-color: rgb(185,22,53);
     display: none;
     justify-content: center;
     align-items: center;
@@ -127,21 +145,22 @@
     font-size: 18px;
     font-weight: 700;
     margin-right: 20px;
-    color: #112121;
+    color: #fff;
 }
 
 .restaurant-checkout {
     outline: none;
     padding: 10px 20px;
     background-color: inherit;
-    border: 2px solid #112121;
-    color: #112121;
+    border: 2px solid #fff;
+    color: #fff;
     font-family: "Quicksand" sans-serif;
+    font-weight: bold;
 }
 
 .restaurant-checkout:hover {
-    background-color: #112121;
-    color: rgb(66, 255, 151);
+    background-color: #fff;
+    color: rgb(230,69,95);
 }
 
 .popup-cont {
@@ -155,8 +174,9 @@
     width: 90%;
     height: 70%;
     margin: 0 auto;
-    background: #fff;
-    color: #000;
+    background: rgb(240, 233, 233);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    color: rgb(185,22,53);
     padding: 50px;
     border-radius: 20px;
     z-index: 10;
@@ -166,7 +186,7 @@
 .cancel-mark {
     font-size: 18px;
     font-weight: 700;
-    color: #112121;
+    color: rgb(185,22,53);
     padding: 10px;
     position: absolute;
     top: 5px;
@@ -190,13 +210,13 @@ tr {
 
 tr.headers {
     border-bottom: 1px solid #112121;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     padding-bottom: 5px;
 }
 
 tr.order-price {
     border-top: 1px solid #112121;
-    margin-top: 20px;
+    margin-top: 30px;
     padding-top: 5px;
 }
 
@@ -215,13 +235,17 @@ td {
     gap: 20px;
     margin: 50px;
     padding: 20px;   
+    color: #000;
 }
 
 .location-submit input {
     border: none;
     outline: none;
-    border-bottom: 1px solid #112121;
+    background-color: inherit;
+    border-bottom: 1px solid rgb(185,22,53);
     padding-bottom: 3px;
+    font-family: "Quicksand";
+    font-size: 20px;
 }
 
 .coord-form {
@@ -236,19 +260,18 @@ td {
 
 .coord-submit, .current-location, .confirm-order {
     cursor: pointer;
-    font-family: "Quicksand" sans-serif;
-    outline: none;
+    font-family: "Quicksand";
+    font-weight: 700;
+    color: rgb(225,28,64);
     padding: 10px 20px;
-    background-color: #fff;
-    color: #112121;
-    border: 2px solid #112121;
+    background: inherit;
+    border: 1px solid rgb(225,28,64);
     border-radius: 20px;
 }
 
 .coord-submit:hover, .current-location:hover, .confirm-order:hover {
-    background-color: #112121;
+    background: rgb(225,28,64);
     color: #fff;
-    border-color: #112121;
 }
 
 p.delivery {
@@ -273,11 +296,11 @@ p.delivery {
     justify-content: space-between;
     align-items: center;
     padding-bottom: 20px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgb(192, 186, 186);
 }
 
 .reviews-intro h2 {
-    color: rgb(66, 255, 151);
+    color: rgb(185,22,53);
 }
 
 .review-buttons {
@@ -288,17 +311,16 @@ p.delivery {
 
 .make-review, .reviews-toggle {
     font-family: "Quicksand" sans-serif;
-    outline: none;
-    font-size: 500;
+    font-weight: 700;
+    background-color: rgb(185,22,53);
     padding: 10px 20px;
     border: none;
-    background-color: rgb(8, 138, 66);
-    color: #fff;
     border-radius: 10px;
+    color: #fff;
 }
 
 .make-review:hover, .reviews-toggle:hover {
-    background-color: rgb(27, 185, 98);
+    background: rgb(225,28,64);
 }
 
 button {
@@ -316,9 +338,9 @@ button {
 .new-review textarea {
     background-color: inherit;
     outline: none;
-    border: 1px solid rgb(66, 255, 151);
+    border: 1px solid rgb(185,22,53);
     width: 40%;
-    color: rgb(66, 255, 151);
+    color: #000;
     font-family: "Quicksand";
     font-size: 16px;
 }
@@ -339,7 +361,7 @@ button.reviews-toggle {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    border-bottom: 1px solid rgb(66, 255, 151);
+    border-bottom: 1px solid rgb(192, 186, 186);
     padding: 10px;
 }
 
@@ -361,8 +383,12 @@ button.reviews-toggle {
 }
 
 .review-headline h3, .review-headline span {
-    color: rgb(66, 255, 151);
+    color: rgb(230,69,95);
     font-weight: 500;
+}
+
+.review-text {
+    color: #000;
 }
 
 .order-success {
