--- a/derash/static/styles/logged_in.css
+++ b/derash/static/styles/logged_in.css
@@ -3,14 +3,13 @@
 }
 
 body {
-    background-color: rgb(4, 19, 32);
+    background-color: #fff;
     color: #fff;
 }
 
 .header {
     width: 100%;
     margin-left: 20px;
-    background-color: rgb(4, 19, 32);
     position: fixed;
     z-index: 10;
     top: 0;
@@ -18,12 +17,13 @@ body {
     padding: 20px 30px;
     display: flex;
     justify-content: space-between;
+    background-color: #fff;
 }
 
 .app-name {
     font-size: 24px;
     font-weight: 700;
-    background-image: linear-gradient(to bottom right, rgb(71, 238, 71), rgb(137, 255, 173));
+    background-image: linear-gradient(to bottom right, rgb(225,28,64), rgb(185,22,53));
     background-clip: text;
     color: transparent;
 }
@@ -36,19 +36,93 @@ body {
 
 .nav-link {
     font-weight: 600;
-    color: rgb(214, 243, 227);
+    color: rgb(185,22,53);
     padding-bottom: 10px;   
 }
 
 .nav-link:hover {
-    color: rgb(66, 255, 151);
+    color: rgb(230,69,95);
+}
+
+.main-nav {
+    margin-left: 20px;
+    height: 80%;
+    width: 25%;
+
+    position: fixed;
+    top: 80px;
+}
+
+.select-nothing {
+    color: rgb(225,28,64), rgb(185,22,53)
+}
+
+.nav-items {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    margin: 0 20px;
+    padding-top: 20px;
+    gap: 20px;
+    border-top: 1px solid rgb(192, 186, 186);
+}
+
+
+.nav-item {
+    padding: 20px;
+    background-color:rgb(240, 233, 233);
+    color: rgb(185,22,53);
+    border-radius: 10px;
+    font-weight: bold;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.nav-item:hover {
+    cursor: pointer;
+    background-color: rgb(230,69,95);
+    color: #fff;
+}
+
+.account-info {
+    background-color: rgb(230,69,95);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 10px 20px;
+    color: #fff;
+    border-radius: 20px;
+
+    position: absolute;
+    bottom: 0;
+    margin: 0 20px;
+
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.account-info p {
+    font-weight: 700;
+}
+
+.account-info:hover {
+    background-color: rgb(185,22,53);
+}
+
+.account-info img {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
 }
 
 .loader {
     width: 60px;
     margin: 0 auto;
     aspect-ratio: 2;
-    --_g: no-repeat radial-gradient(circle closest-side,rgb(66, 255, 151) 90%,rgb(66, 255, 151, 0));
+    --_g: no-repeat radial-gradient(circle closest-side,rgb(225,28,64) 90%,rgb(66, 255, 151, 0));
     background: 
       var(--_g) 0%   50%,
       var(--_g) 50%  50%,
@@ -61,4 +135,23 @@ body {
     40%{background-position:0% 100%, 50%   0%,100%  50%}
     60%{background-position:0%  50%, 50% 100%,100%   0%}
     80%{background-position:0%  50%, 50%  50%,100% 100%}
+}
+
+.content {
+    width: 70%;
+    position: relative;
+    background-color: rgb(255, 255, 255);
+    top: 64px;
+    left: 30%;
+    padding: 20px;
+    padding-left: 40px;
+}
+
+.contentc > p {
+    color: #000;
+}
+
+.nav-item.clicked {
+    background-color: rgb(185,22,53);
+    color: #fff;
 }
