--- a/derash/static/styles/owner_home.css
+++ b/derash/static/styles/owner_home.css
@@ -5,18 +5,26 @@
     top: 64px;
 }
 
+.select-nothing {
+    color: rgb(185,22,53);
+    color: rgb(230,69,95);
+    color: rgb(225,28,64);
+    color: rgb(192, 186, 186);
+    color: rgb(240, 233, 233);
+}
+
 .intro {
     margin: 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgb(192, 186, 186);
     padding-bottom: 10px;
 }
 
 .intro h1 {
     font-size: 28px;
-    color: rgb(66, 255, 151);
+    color: rgb(185,22,53);
 }
 
 a.add-restaurant {
@@ -24,13 +32,13 @@ a.add-restaurant {
     outline: none;
     padding: 10px 20px;
     border: none;
-    background-color: rgb(8, 138, 66);
+    background-color: rgb(185,22,53);
     color: #fff;
     border-radius: 10px;
 }
 
 .add-restaurant:hover {
-    background-color: rgb(27, 185, 98);
+    background-color: rgb(230,69,95);
 }
 
 .owner-restaurants {
@@ -38,11 +46,13 @@ a.add-restaurant {
     flex-direction: column;
     margin: 20px 50px;
     gap: 20px;
+
+    color: #000;
 }
 
 .owner-restaurant {
-    background-color: #112121;
-    border: 2px solid rgb(66, 255, 151);
+    background-color: rgb(240, 233, 233);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
     display: flex;
     flex-direction: column;
@@ -55,7 +65,7 @@ a.add-restaurant {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgb(192, 186, 186);
     padding-bottom: 5px;
 }
 
@@ -68,16 +78,16 @@ a.add-restaurant {
 .restaurant-headline h2 {
     font-size: 20px;
     font-weight: 700;
-    color: rgb(66, 255, 151);
+    color: rgb(185,22,53);
 }
 
 .restaurant-headline a:hover {
-    border-bottom: 1px solid rgb(66, 255, 151);
+    border-bottom: 1px solid rgb(185,22,53);
 }
 
 .restaurant-headline span {
     display: inline-block;
-    background-color: rgb(247, 122, 122);
+    background-color: rgb(185,22,53);
     width: 10px;
     height: 10px;
     border-radius: 50%;
@@ -85,151 +95,36 @@ a.add-restaurant {
 }
 
 .restaurant-headline span.active {
-    background-color: rgb(66, 255, 151);
-}
-
-.restaurant-description {
-    color: #fff;
+    background-color: rgb(19, 243, 120);
 }
 
 .activate, .deactivate {
     outline: none;
     padding: 10px 20px;
     font-family: "Quicksand";
-    border: 2px solid rgb(247, 122, 122);
+    border: 2px solid rgb(185,22,53);
     border-radius: 20px;
+    font-weight: 700;
 }
 
 .activate {
     background-color: inherit;
-    border-color:rgb(66, 255, 151);
-    color: rgb(66, 255, 151);
+    border-color:rgb(0, 204, 17);
+    color: rgb(0, 204, 17);
 }
 
 .deactivate {
     background-color: inherit;
-    color: rgb(247, 122, 122);
+    color: rgb(185,22,53);
 
 }
 
 .activate:hover {
-    background-color: rgb(66, 255, 151);
+    background-color: rgb(6, 245, 113);
     color: #112121;
 }
 
 .deactivate:hover {
-    background-color: rgb(247, 122, 122);
-    color: #112121;
-}
-
-.popup-cont {
-    position: relative;
-    top: -50px;
-    width: 100%;
-}
-
-.popup-new-restaurant {
-    visibility: hidden;
-    position: fixed;
-    width: 30%;
-    left: 25%;
-    background: #112121;;
+    background-color: rgb(185,22,53);
     color: #fff;
-    padding: 30px;
-    border: 2px solid rgb(66, 255, 151);
-    border-radius: 20px;
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-/* .new-restaurant-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 20px;
-}
-
-.new-restaurant-form {
-
-} */
-
-form {
-    padding: 8px 0px;
-    border-radius: 30px;
-
-    background-color: #112121;
-}
-
-legend {
-    text-align: center;
-    font-size: 24px;
-    font-weight: 700;
-    margin-bottom: 25px;
-}
-
-form fieldset {
-    display: flex;
-    flex-flow: column;
-    align-items: stretch;
-    gap: 15px;
-}
-
-.field {
-    display: flex;
-    flex-flow: column;
-    gap: 5px;
-}
-
-.field label {
-    font-weight: 700;
-}
-
-.field input, .field textarea {
-    font-family: "Quicksand" sans-serif;
-    margin-top: 5px;
-    padding: 2px 0;
-    font-size: 16px;
-    background-color: inherit;
-    color: rgb(66, 255, 151);
-    /* border: 1px solid black;
-    border-radius: 15px; */
-    border: none;
-    outline: none;
-    border-bottom: 1px solid rgb(66, 255, 151);
-}
-
-
-input[type='text'], textarea {
-    font-family: "Quicksand";
-}
-
-.submit input {
-    width: 100%;
-    padding: 15px 30px;
-    margin-top: 10px;
-    outline: none;
-    background-color: #112121;
-    border: 2px solid rgb(66, 255, 151);
-    border-radius: 20px;
-    color: rgb(66, 255, 151);
-    font-family: "Quicksand" sans-serif;
-    font-weight: 700;
-}
-
-.submit input:hover {
-    background-color: rgb(66, 255, 151);
-    padding: 14px 29px;
-    color: #112121;
-    cursor: pointer;
-}
-
-.cancel {
-    color:rgb(66, 255, 151);
-    font-size: 20px;
-    cursor: pointer;
-    position: absolute;
-    top: 15px;
-    right: 15px;
 }
