--- a/derash/static/styles/owner_restaurant.css
+++ b/derash/static/styles/owner_restaurant.css
@@ -1,82 +1,23 @@
-.main-nav {
-    margin-left: 20px;
-    height: 100%;
-    width: 25%;
-
-    position: fixed;
-    top: 64px;
+.select-nothing {
+    color: rgb(185,22,53);
+    color: rgb(230,69,95);
+    color: rgb(225,28,64);
+    color: rgb(192, 186, 186);
+    color: rgb(240, 233, 233);
 }
-
-.nav-items {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding: 20px;
-    gap: 20px;
-}
-
-.nav-item {
-    padding: 30px;
-    background-color:rgb(46, 54, 59);
-    border-radius: 10px;
-    font-weight: bold;
-
-    display: flex;
-    gap: 20px;
-    align-items: center;
-}
-
-.nav-item:hover {
-    cursor: pointer;
-    background-color:rgb(74, 82, 87);
-}
-
-.content {
-    width: 70%;
-    background: rgb(4, 19, 32);
-    position: relative;
-    top: 64px;
-    left: 30%;
-    padding: 20px;
-    padding-right: 50px;
-}
-
-.nav-item.clicked {
-    border: 2px solid rgb(66, 255, 151);
-}
-
-/* HTML: <div class="loader"></div> */
-.loader {
-    width: 60px;
-    margin: 0 auto;
-    aspect-ratio: 2;
-    --_g: no-repeat radial-gradient(circle closest-side,rgb(66, 255, 151) 90%,rgb(66, 255, 151, 0));
-    background: 
-      var(--_g) 0%   50%,
-      var(--_g) 50%  50%,
-      var(--_g) 100% 50%;
-    background-size: calc(100%/3) 50%;
-    animation: l3 1s infinite linear;
-  }
-  @keyframes l3 {
-      20%{background-position:0%   0%, 50%  50%,100%  50%}
-      40%{background-position:0% 100%, 50%   0%,100%  50%}
-      60%{background-position:0%  50%, 50% 100%,100%   0%}
-      80%{background-position:0%  50%, 50%  50%,100% 100%}
-  }
 
 .intro {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgb(192, 186, 186);
     padding-bottom: 10px;
     margin-bottom: 20px;
 }
 
 .intro h1, .dishes-section h2 {
     font-size: 28px;
-    color: rgb(66, 255, 151);
+    color: rgb(185,22,53);
 }
 
 .edit-restaurant, .new-dish, .edit-dish, .reviews-toggle {
@@ -85,24 +26,26 @@
     font-size: 500;
     padding: 8px 20px;
     border: none;
-    background-color: rgb(8, 138, 66);
+    background-color: rgb(185,22,53);
     color: #fff;
     border-radius: 10px;
 }
 
 .edit-restaurant:hover, .new-dish:hover, .edit-dish:hover, .reviews-toggle:hover {
-    background-color: rgb(27, 185, 98);
+    background-color: rgb(230,69,95);
 }
 
 
 .description {
+    color: #000;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 10px;
     padding-bottom: 10px;
     margin-bottom: 20px;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgb(192, 186, 186);
 }
 
 .restaurant-img {
@@ -114,7 +57,7 @@
 
 .description i {
     font-size: 24px;
-    color: #f00;
+    color: rgb(230,69,95);
     margin-right: 10px;
 }
 
@@ -123,10 +66,6 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 30px;
-}
-
-div .popup-new-dish {
-    width: 40%;
 }
 
 .dishes {
@@ -141,8 +80,9 @@ div .popup-new-dish {
     flex-direction: column;
     gap: 10px;
     padding: 20px;
-    background-color: #112121;
-    border: 2px solid rgb(66, 255, 151);
+    color: #000;
+    background-color: rgb(240, 233, 233);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .dish-main {
@@ -158,7 +98,7 @@ div .popup-new-dish {
 }
 
 .dish-intro h2, .reviews-intro h2 {
-    color: rgb(66, 255, 151);
+    color: rgb(185,22,53);
 }
 
 .dish-img {
@@ -169,7 +109,7 @@ div .popup-new-dish {
 
 .dish-price {
     font-size: 20px;
-    color: rgb(66, 255, 151);
+    color: rgb(230,69,95);
 }
 
 a {
@@ -180,7 +120,7 @@ a {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border-bottom: 1px solid #fff;
+    border-bottom: 1px solid rgb(192, 186, 186);
     padding-bottom: 20px;
     margin-bottom: 20px;
 }
@@ -201,8 +141,9 @@ button.reviews-toggle {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    border-bottom: 1px solid rgb(66, 255, 151);
+    border-bottom: 1px solid rgb(192, 186, 186);
     padding: 10px;
+    color: #000;
 }
 
 .review-headline {
@@ -223,13 +164,13 @@ button.reviews-toggle {
 }
 
 .review-headline h3, .review-headline span {
-    color: rgb(66, 255, 151);
+    color: rgb(230,69,95);
     font-weight: 500;
 }
 
 .section-title {
     font-size: 28px;
-    color: rgb(66, 255, 151);
+    color: rgb(185,22,53);
     border-bottom: 1px solid #fff;
     margin-bottom: 20px;
     padding-bottom: 10px;
@@ -245,26 +186,26 @@ button.reviews-toggle {
     display: flex;
     flex-direction: column;
     padding: 20px;
-    background-color: #112121;
-    border: 2px solid rgb(66, 255, 151);
+    background-color: rgb(240, 233, 233);
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     gap: 20px;
 }
 
 .order-headline {
     display: flex;
     justify-content: space-between;
-    color: rgb(66, 255, 151);
-    border-bottom: 1px solid rgb(66, 255, 151);
+    color: rgb(185,22,53);
+    border-bottom: 1px solid rgb(192, 186, 186);
 }
 
 .order-customer-name {
-    color: rgb(66, 255, 151);
+    color: rgb(185,22,53);
     font-size: 20px;
     font-weight: 500;
 }
 
 .order-time {
-    color: rgb(66, 255, 151);
+    color: rgb(230,69,95);
 }
 
 .order-body {
@@ -274,23 +215,23 @@ button.reviews-toggle {
 }
 
 .order-text {
-    color: #fff;
+    color: #000;
     display: flex;
     flex-direction: column;
     gap: 10px;
 }
 
 .order-text span {
-    color: rgb(66, 255, 151);
+    color: rgb(230,69,95);
     font-weight: 700;
 }
 
 .awaiting-driver {
-    color: rgb(66, 255, 151);
+    color: rgb(230,69,95);
 }
 
 .order-license-num {
-    color: rgb(66, 255, 151);
+    color: rgb(230,69,95);
 }
 
 .order-prepared {
