--- a/derash/static/styles/register.css
+++ b/derash/static/styles/register.css
@@ -6,12 +6,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 50px;
 
-    background-color: rgb(199, 255, 199);
+    background-color: rgb(248, 231, 234);
 }
 
 form {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     margin: 20px;
     padding: 20px 50px;
     border-radius: 30px;
@@ -24,14 +24,14 @@ legend {
     text-align: center;
     font-size: 24px;
     font-weight: 700;
-    margin-bottom: 35px;
+    margin-bottom: 15px;
 }
 
 form fieldset {
     display: flex;
     flex-flow: column;
     align-items: stretch;
-    gap: 25px;
+    gap: 10px;
 }
 
 .field {
