--- a/derash/templates/owner_home.html
+++ b/derash/templates/owner_home.html
@@ -7,7 +7,7 @@
     <div class="main-content">
         <div class="intro">
             <h1>My Restaurants</h1>
-            <a class="add-restaurant" href="http://127.0.0.1:5000/o/new-restaurant"><i class="fa-solid fa-plus"></i> New</i></a>
+            <a class="add-restaurant" href="{{ url_for('add_new_restaurant') }}"><i class="fa-solid fa-plus"></i> New</i></a>
         </div>
         <div class="owner-restaurants"></div>
     </div>
