--- a/derash/templates/layout.html
+++ b/derash/templates/layout.html
@@ -21,11 +21,13 @@
             <p class="header-name">DERASH</p>
             <div class="links">
                 <a href="{{ url_for('home') }}" class="home-link header-link">Home</a>
-                <a href="#" class="home-link header-link">About</a>
-                <a href="#"  class="home-link header-link">Contact</a>
                 {% if current_user.is_authenticated %}
                     <a href="{{ url_for('logout') }}" class="home-link header-link">Log out</a>
-                {% else %}
+                    {% else %}
+		    <a href="{{ url_for('home') }}#features" class="about-link header-link">Features</a>
+		    <a href="{{ url_for('home') }}#about" class="about-link header-link">About</a>
+		    <a href="{{ url_for('home') }}#demo" class="demo-link header-link">Demo</a>
+                    <a href="{{ url_for('home') }}#contact"  class="contact-link header-link">Contact</a>
                     <a href="{{ url_for('login') }}" class="login-link header-link">Log in</a>
                     <a href="{{ url_for('register') }}" class="signup-link header-link">Sign up</a>
                 {% endif %}
@@ -40,7 +42,7 @@
     {% block footer %}
     <footer class="footer">
         <p class="copyright">Copyright &#169 Derash. All rights reserved</p>
-        <div class="social-links">
+        <div class="social-links" id="contact">
             <a href="https://github.com/Zennoon" target="_blank" class="github"><i class="fa-brands fa-github"></i></a>
             <a href="https://linkedin.com/in/yunus-kedir" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
             <a href="https://t.me/@Zennoon" target="_blank" class="telegram"><i class="fa-brands fa-telegram"></i></a>
